...
                    <view key="view" contentMode="scaleToFill" id="QDE-yS-jjx">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z4G-TW-Kpf">
                                <rect key="frame" x="20" y="64" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="firstTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XZ5-Lr-jOI">
                                <rect key="frame" x="20" y="118" width="374" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="secondTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0tO-DX-kYZ">
                                <rect key="frame" x="20" y="172" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="allMatchingButton"/>
                                <state key="normal" title="All matching letters"/>
                                <connections>
                                    <action selector="allMatchingLettersButtonPressed:" destination="TQX-eN-9BL" eventType="touchUpInside" id="KC4-l6-rCz"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Matching letters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dc3-xJ-23I">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KuM-ED-N9l">
                                <rect key="frame" x="20" y="263" width="374" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="notMatchingButton"/>
                                <state key="normal" title="All characters that do not match"/>
                                <connections>
                                    <action selector="allNotMatchingLettersButtonPressed:" destination="TQX-eN-9BL" eventType="touchUpInside" id="Ocz-Nm-9sq"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Not matching letters" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pxr-j5-xYz">
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwU-go-5PN">
                                <rect key="frame" x="20" y="354" width="374" height="29"/>
                                <accessibility key="accessibilityConfiguration" identifier="notMatchingFromFirstButton"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <state key="normal" title="All characters that do not match from the first text field"/>
                                <connections>
                                    <action selector="uniqueCharactersButtonPressed:" destination="TQX-eN-9BL" eventType="touchUpInside" id="JN3-Vf-1pY"/>
                                </connections>
                            </button>
...
